--- a/foodscanner_jiyoon/foodApp/templates/main.html
+++ b/foodscanner_jiyoon/foodApp/templates/main.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <center><img src="static/쿠키.png" style="width: 250px; height: 250px;"></center>
+    <center><img src="static/soup.png" style="width: 250px; height: 250px;"></center>
     <div class="infobox">
         {% for post in Ingredients1 %}
         <h2>상품명: {{post.name}}</h2>
