--- a/foodscanner_yoon/foodApp/templates/detail3.html
+++ b/foodscanner_yoon/foodApp/templates/detail3.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load mathfilters %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,14 +27,13 @@
     <div class="infobox">
         <center>
             <h2>상품명: {{detail_key.product_name}}</h2><br>
-            <h3>탄수화물 : {{detail_key.carbohydrate}}g 권장 여성 한끼 섭취량: 35g</h3>
-            <h3>나트륨 : {{detail_key.sodium}}mg 권장 여성 한끼 섭취량: 666.6mg</h3>
             <h3>지방 : {{detail_key.fat}}g 권장 여성 한끼 섭취량: 4.7g</h3>
-            <h3>단백질 : {{detail_key.protein}}g 권장 여성 한끼 섭취량: 13.3g</h3>
-            <h3>콜레스테롤 : {{detail_key.cholesterol}}mg 권장 여성 한끼 섭취량: 100mg</h3>
-            <h3>칼로리 : {{detail_key.kcal}}kcal 권장 여성 한끼 칼로리: 700kcal</h3>
+            {% if detail_key.fat < 4.7 %}
+            <h3>{{4.7|sub:detail_key.fat}}g 정도 적정합니다!! <br> 다음 식사를 하실때, 참고해주세요 </h3>
+            {% elif detail_key.fat > 4.7 %}
+            <h3>{{detail_key.fat|sub:4.7}}g 이 초과되었습니다!! <br> 다음 식사를 하실때, 참고해주세요 </h3>
+            {% endif %}
         </center>
-        
 </body>
 </html>
 
