--- a/foodscanner_yoon/foodApp/templates/detail_man.html
+++ b/foodscanner_yoon/foodApp/templates/detail_man.html
@@ -8,16 +8,30 @@
     <title>Document</title>
 </head>
 <body>
-    <center><img src="../static/쿠키.png" style="width: 250px; height: 250px;"></center>
+    {% if detail_key.foodtype == '즉석식품류'%}
+    <center><img src="../static/즉석식품.png" style="width: 250px; height: 250px;"></center>
+    {% elif detail_key.foodtype == '면류'%}
+    <center><img src="../static/면류.png" style="width: 250px; height: 250px;"></center>
+    {% elif detail_key.foodtype == '조미식품'%}
+    <center><img src="../static/조미식품.png" style="width: 250px; height: 250px;"></center>
+    {% elif detail_key.foodtype == '잼류'%}
+    <center><img src="../static/jam.png" style="width: 250px; height: 250px;"></center>
+    {% elif detail_key.foodtype == '식육가공품 및 포장육'%}
+    <center><img src="../static/국밥.png" style="width: 250px; height: 250px;"></center>
+    {% elif detail_key.foodtype == '과자류, 빵류 또는 떡류'%}
+    <center><img src="../static/과자류.png" style="width: 250px; height: 250px;"></center>
+    {% else%}
+    <center><img src="../static/milk-products.png" style="width: 250px; height: 250px;"></center>
+    {% endif %}
     <div class="infobox">
         <center>
             <h2>상품명: {{detail_key.product_name}}</h2><br>
-            <h3>탄수화물 : {{detail_key.carbohydrate}}mg WHO권장 남성 한끼 섭취량: 500mg</h3>
-            <h3>나트륨 : {{detail_key.sodium}}mg WHO권장 남성 한끼 섭취량: 300mg</h3>
-            <h3>지방 : {{detail_key.fat}}mg WHO권장 남성 한끼 섭취량: 400mg</h3>
-            <h3>콜레스테롤 : {{detail_key.cholesterol}}kcal WHO권장 남성 한끼 칼로리: 8000kcal</h3>
-            <h3>단백질 : {{detail_key.protein}}mg WHO권장 남성 한끼 섭취량: 0mg</h3>
-            <h3>칼로리 : {{detail_key.kcal}}mg WHO권장 남성 한끼 섭취량: 500mg</h3>
+            <h3>탄수화물 : {{detail_key.carbohydrate}}g 권장 남성 한끼 섭취량: 40g</h3>
+            <h3>나트륨 : {{detail_key.sodium}}mg 권장 남성 한끼 섭취량: 666.6mg</h3>
+            <h3>지방 : {{detail_key.fat}}g 권장 남성 한끼 섭취량: 5.9g</h3>
+            <h3>단백질 : {{detail_key.protein}}g 권장 남성 한끼 섭취량: 18.6g</h3>
+            <h3>콜레스테롤 : {{detail_key.cholesterol}}mg 권장 남성 한끼 섭취량: 100mg</h3>
+            <h3>칼로리 : {{detail_key.kcal}}kcal 권장 남성 한끼 칼로리: 900kcal</h3>
         </center>
         
 </body>
